--- a/.prettierrc
+++ b/.prettierrc
@@ -9,11 +9,10 @@
   "proseWrap": "preserve",
   "quoteProps": "as-needed",
   "requirePragma": false,
-  "semi": false,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all",
+  "trailingComma": "none",
   "useTabs": false,
   "vueIndentScriptAndStyle": false,
-  "endOfLine": "lf"
+  "endOfLine": "auto"
 }
